--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "google-alerts-api": "^0.2.3",
     "http-errors": "~1.6.2",
+    "moment": "^2.22.2",
     "mongodb": "^2.0.0",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
